[FIX]menuをcontextに、scrollbarのz-index等

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,3 @@
-html {
-  scrollbar-width: none;
-}
 body, h1, h2, h3, p {
   margin: 0;
 }
